# rm2023_auto_sentry_ws

./: .gitignore  README.md
src/4ws_auto_infantry/: CMakeLists.txt  package.xml
src/4ws_auto_infantry/config/: joint_names_4ws_auto_infantry.yaml  taurus_4ws.rviz
src/4ws_auto_infantry/launch/: display.launch  display_rviz.launch  gazebo.launch
src/4ws_auto_infantry/meshes/: bl_steering_link.STL  bl_wheel_link.STL  br_steering_link.STL  br_wheel_link.STL  cam_link.STL  fl_steering_link.STL  fl_wheel_link.STL  fr_steering_link.STL  fr_wheel_link.STL  imu_link.STL  lidar_1_link.STL  lidar_2_link.STL  yaw_link.STL
src/4ws_auto_infantry/robots/: 4ws_auto_infantry.xacro
src/4ws_auto_infantry/urdf/: 4ws_auto_infantry.csv  4ws_auto_infantry.urdf
src/auto_nav/: CMakeLists.txt  package.xml
src/auto_nav/cfg/: tracks_follow.cfg
src/auto_nav/example/: pid.c  pid.h
src/auto_nav/include/: pid.h  pid_position_follow copy.h  pid_position_follow.h  utility.h
src/auto_nav/launch/: amcl_simple_meca_car.launch  amcl_simulink.launch  amcl（复件）.launch  auto_fsm.launch  auto_simulink_gmapping.launch  gmapping.launch  gmapping_demo.launch  navi_demo.launch  navi_pid_follow.launch  (+9 more)
src/rmus_map_2/: CMakeLists.txt  package.xml
src/roborts_msgs/: CMakeLists.txt  package.xml
src/roborts_msgs/msg/: EnemyInfo.msg  EnemyLocate.msg  GameStatus.msg  GimbalCtrl.msg  GimbalFdb.msg  LocationInfo.msg  RobotStatus.msg
src/roborts_msgs/srv/: PidPlannerStatus.srv  Relocate.srv
src/scan_to_map/: CMakeLists.txt  package.xml
src/simple_meca_car/: CMakeLists.txt  package.xml
(+134 files in other folders)
